[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/import_tree_player_anim/MainMenu.gd" type="Script" id=1]


[node name="ImportAnim" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_right = 286.0
margin_bottom = 564.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="import" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 245.0
margin_right = 58.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Import"
flat = false

[node name="Label" type="Label" parent="import"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = -32.0
margin_right = 227.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "If AnimationTreePlayer is selected, import all the animations, previously saved or loaded, in the AnimationTreePlayer"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="save" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 425.0
margin_right = 43.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false

[node name="Label" type="Label" parent="save"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_top = -52.0
margin_right = 225.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "If AnimationPlayer is selected, save all the animations in AnimationPlayer in the folder res://animations/
USE ONLY IF YOU NEED TO SAVE ANIMATIONS"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="load" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 124.0
margin_right = 48.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false

[node name="Label" type="Label" parent="load"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_top = -18.0
margin_right = 206.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "If AnimationPlayer is selected, load all animations in memory"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelContainer" type="PanelContainer" parent="."]

modulate = Color( 0.390259, 0.649459, 0.71875, 1 )
self_modulate = Color( 0.285339, 0.832467, 0.859375, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Animations Loaded" type="ColorRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 33.0
margin_right = 37.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.3, 0, 0, 1 )

[node name="Label" type="Label" parent="Animations Loaded"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = -22.0
margin_right = 211.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Animations not loaded! Load or Save animations in AnimationPlayer!"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="import" to="." method="_on_import_button_down"]

[connection signal="button_down" from="save" to="." method="_on_save_button_down"]

[connection signal="button_down" from="load" to="." method="_on_load_button_down"]


